--- a/Prague Parking V2/Prague Parking V2.csproj
+++ b/Prague Parking V2/Prague Parking V2.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\PragueParkingClassLibrary\PragueParkingClassLibrary\PragueParkingClassLibrary.csproj" />
+    <ProjectReference Include="..\PragueParkingClassLibrarySol\PragueParkingClassLibrarySol.csproj" />
   </ItemGroup>
 
 </Project>
